# tandem_stonefish

./: CMakeLists.txt  README.md  package.xml
config/: logitech_fx10_to_teleoperation.yaml
config/aruco/: aruco_tracker.yaml
config/predefined_motions/: bravo_left.yaml  bravo_right.yaml  bravo_uji.yaml
config/ros_control/: bravo_left_ros_control.yaml  bravo_right_ros_control.yaml  bravo_uji_ros_control.yaml  eca_5emicro_manipulator_ros_control.yaml
config/rviz/: girona1000.rviz  girona500.rviz  girona500_uji.rviz  girona500_uji_real_cameras.rviz
launch/: girona500_uji_simulation.launch  teleop.launch
launch/core/: girona500_uji_base.launch.core
resources/objects/net/: net.blend
resources/objects/patch/: gripper_patch_phy.mtl
scenarios/: girona500_uji_simulation.scn
scenarios/environments/: cirtesu.scn  cirtesu_aruco.scn  cirtesu_poster.scn
scenarios/objects/: net.scn  net_flexible.scn
scenarios/robots/: girona500_uji_bravo_real_cameras.scn
scripts/: fold_arms.sh  joy_to_teleoperation.py
src/: odom_to_tf.py  predefined_positions.cpp
urdf/: cirtesu.urdf.xacro  girona1000_dual_bravo.urdf.xacro  girona1000_stereo.urdf.xacro  girona500_uji_bravo.urdf.xacro  girona500_uji_bravo_payload_real.urdf.xacro  girona500_uji_bravo_real_cameras.urdf.xacro  girona500_uji_stereo.urdf.xacro
