<?xml version="1.0"?>
<package format="2">
  <name>tandem_stonefish</name>
  <version>0.0.0</version>
  <description>The tandem stonefish package</description>

  <maintainer email="barajas@uji.es">Salvador Lopez</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend> roscpp </depend>
  <depend>rosparam </depend>

</package>